Se cargan avances en proyecto

--- a/spring-boot-data-jpa/src/main/resources/templates/listar.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/listar.html
@@ -27,8 +27,16 @@
             <td th:text="${cliente.apellido}"></td>
             <td th:text="${cliente.email}"></td>
             <td th:text="${cliente.creadoEn}"></td>
-            <td><a th:href="@{/form/} + ${cliente.id}" class="btn btn-primary">Editar</a></td>
-            <td><a th:href="@{/eliminar/} + ${cliente.id}" class="btn btn-danger">Eliminar</a></td>
+            <td>
+                <a th:href="@{/factura/form/} + ${cliente.id}" th:alt="'Crear Factura'"><i
+                        class="fas fa-file-invoice"></i></a>
+            </td>
+            <td>
+                <a th:href="@{/form/} + ${cliente.id}" th:alt="'Editar'"><i class="fas fa-pen"></i></a>
+            </td>
+            <td>
+                <a th:href="@{/eliminar/} + ${cliente.id}" th:alt="'Eliminar'"><i class="fas fa-trash-alt"></i></a>
+            </td>
         </tr>
         </tbody>
 
