--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="/layout/layout :: head"></head>
 <body>
-$END$
+
+<header th:replace="/layout/layout :: header"></header>
+
+<div class="container">
+
+    <a class="btn btn-primary my-1 btn-sm" th:href="@{/ver/} + ${facturaDTO.clienteDTO.id}" alt="'Volver'">
+        <i class="fas fa-chevron-left"></i>
+        Volver
+    </a>
+
+    <h2 th:text="${facturaDTO.clienteDTO.nombre} + ' ' + ${facturaDTO.clienteDTO.apellido}"></h2>
+
+    <form th:action="@{/guardar}" th:object="${facturaDTO}" method="post">
+
+        <div class="form-group">
+            <div class="row p-3">
+                <label class="col-form-label">Descripcion</label>
+                <input type="text" th:field="*{descripcion}" class="form-control"/>
+                <small th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></small>
+            </div>
+
+            <div class="row p-3">
+                <label>Observaciones</label>
+                <textarea type="text" th:field="*{observacion}" class="form-control"></textarea>
+                <small th:if="${#fields.hasErrors('observacion')}" th:errors="*{observacion}"></small>
+            </div>
+
+            <div class="text-right p-3">
+                <button class="btn btn-success" type="submit" th:text="${titulo}"></button>
+            </div>
+
+        </div>
+
+
+    </form>
+</div>
+
+<footer th:replace="/layout/layout :: footer"></footer>
+
 </body>
 </html>
