--- a/spring-boot-data-jpa/src/main/resources/templates/ver.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/ver.html
@@ -5,11 +5,61 @@
 
 <header th:replace="/layout/layout :: header"></header>
 
-<div class="container">
+<div class="container py-4">
 
-    <h1 th:text="${titulo}"></h1>
+    <div class="card bg-light">
+        <div class="card-header" th:text="${titulo}"></div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-2">
+                    <div class="row">
+                        <img style="width: 100%; height: 50%" th:src="@{'/imagenes/' + ${clienteDTO.foto}}"
+                             class="img-thumbnail rounded float-left img-fluid "
+                             th:alt="${clienteDTO.foto}">
+                    </div>
+                    <div class="row my-3">
+                        <a th:href="@{/factura/form/} + ${clienteDTO.id}" alt="'Crear Factura'"><i
+                                class="fas fa-file-invoice"></i></a>
 
-    <img th:src="@{'/imagenes/' + ${clienteDTO.foto}}">
+                    </div>
+                </div>
+
+                <div class="col-md-10">
+                    <ul class="list-group">
+                        <li class="list-group-item active" th:text="${clienteDTO.nombre}"></li>
+                        <li class="list-group-item" th:text="${clienteDTO.apellido}"></li>
+                        <li class="list-group-item" th:text="${clienteDTO.email}"></li>
+                        <li class="list-group-item" th:text="${clienteDTO.creadoEn}"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="alert alert-info my-4" th:text="'El cliente no tiene facturas'"
+         th:if="${#lists.isEmpty(clienteDTO.facturaDTOList)}"></div>
+
+    <table class="table table-striped table-bordered my-4" th:if="${not #lists.isEmpty(clienteDTO.facturaDTOList)}">
+        <thead class="thead-dark">
+        <tr>
+            <th>Folio</th>
+            <th>Descripci&oacute;n</th>
+            <th>Fecha</th>
+            <th>Total</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="factura : ${clienteDTO.facturaDTOList}">
+            <td th:text="${factura.id}"></td>
+            <td th:text="${factura.descripcion}"></td>
+            <td th:text="${factura.createAt}"></td>
+            <td th:text="${factura.total}"></td>
+        </tr>
+
+        </tbody>
+
+    </table>
+
 
 </div>
 
