Agrego Jquery, se crea autocomplete productos

--- a/spring-boot-data-jpa/src/main/resources/templates/layout/layout.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/layout/layout.html
@@ -5,11 +5,16 @@
         <meta charset="UTF-8">
         <title>SpringBoot</title>
 
+        <script th:src="@{/js/jquery-3.4.0.min.js}"></script>
+
         <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}">
         <script th:src="@{/bootstrap/js/bootstrap.js}"></script>
 
         <link rel="stylesheet" th:href="@{/fontawesome/css/all.css}">
         <script th:src="@{/fontawesome/js/all.js}"></script>
+
+        <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}">
+        <script th:src="@{/js/jquery-ui.min.js}"></script>
     </head>
 
     <body>
