--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -12,6 +12,8 @@
         Volver
     </a>
 
+    <button id="botonPrueba"></button>
+
     <h2 th:text="${facturaDTO.clienteDTO.nombre} + ' ' + ${facturaDTO.clienteDTO.apellido}"></h2>
 
     <form th:action="@{/guardar}" th:object="${facturaDTO}" method="post">
@@ -29,6 +31,11 @@
                 <small th:if="${#fields.hasErrors('observacion')}" th:errors="*{observacion}"></small>
             </div>
 
+            <div class="row p-3">
+                <label class="col-form-label">Buscar Producto</label>
+                <input type="text" class="form-control" name="buscarProducto" id="buscarProducto"/>
+            </div>
+
             <div class="text-right p-3">
                 <button class="btn btn-success" type="submit" th:text="${titulo}"></button>
             </div>
@@ -40,6 +47,7 @@
 </div>
 
 <footer th:replace="/layout/layout :: footer"></footer>
+<script th:replace="factura/js/autocomplete-productos"></script>
 
 </body>
 </html>
