--- a/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
+++ b/spring-boot-data-jpa/src/main/resources/templates/factura/form.html
@@ -12,16 +12,14 @@
         Volver
     </a>
 
-    <button id="botonPrueba"></button>
-
     <h2 th:text="${facturaDTO.clienteDTO.nombre} + ' ' + ${facturaDTO.clienteDTO.apellido}"></h2>
 
-    <form th:action="@{/guardar}" th:object="${facturaDTO}" method="post">
+    <form th:action="@{/factura/guardar}" th:object="${facturaDTO}" method="post">
 
         <div class="form-group">
             <div class="row p-3">
                 <label class="col-form-label">Descripcion</label>
-                <input type="text" th:field="*{descripcion}" class="form-control"/>
+                <input type="text" th:field="*{descripcion}" class="form-control" th:erroclass = "'form-control is-invalid'"/>
                 <small th:if="${#fields.hasErrors('descripcion')}" th:errors="*{descripcion}"></small>
             </div>
 
@@ -35,6 +33,24 @@
                 <label class="col-form-label">Buscar Producto</label>
                 <input type="text" class="form-control" name="buscarProducto" id="buscarProducto"/>
             </div>
+
+            <table th:replace="/factura/plantillaItem :: itemFactura"></table>
+
+            <table id="cargarItemProductos" class="table table-striped table-sm">
+                <thead>
+                <tr class="text-center">
+                    <th>NOMBRE</th>
+                    <th>PRECIO</th>
+                    <th>CANTIDAD</th>
+                    <th>TOTAL</th>
+                    <th>ELIMINAR</th>
+                </tr>
+                </thead>
+                <tbody class="text-center">
+
+                </tbody>
+            </table>
+            <h5>Total <span class="badge badge-secondary" id="granTotal">0</span></h5>
 
             <div class="text-right p-3">
                 <button class="btn btn-success" type="submit" th:text="${titulo}"></button>
